kubernetes/apps/monitoring/goldilocks/app/helmrelease-goldilocks.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: goldilocks
  namespace: monitoring
spec:
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  hostnames:
    - "goldilocks.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: goldilocks-dashboard
          port: 80
